# zephy_comm

./: CMakeLists.txt  openocd.cfg  prj.conf
src/: main.cpp  main_math.cpp  main_slave.cpp  main_transceive.cpp  transceive_master.cpp  transceive_slave.cpp
src/communication/: spi_comm.h
src/project/: main.cpp  main_2.cpp
src/simulator/: CMakeLists.txt
src/simulator/quad_2d/: quad_2d.cpp  quad_2d.h
src/uart/: uart_send.cpp
